[project]
name = "langgraph-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felipe Operti", email = "operti.felipe@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "notebook>=7.4.3",
    "ruff>=0.11.13",
    "typer>=0.16.0",
]

[project.scripts]
agent = "langgraph_ollama.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
